Adicionados os arquivos dockerfile e docker-compose ao projeto.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=empacotamento-api
+spring.application.name=empacotamentoapi
+# Porta padrao da aplicacao
+server.port=8080
+# Credenciais da API (Spring Security - autenticacao basica)
+spring.security.user.name=admin
+spring.security.user.password=admin
+# Configuracao do Swagger (OpenAPI)
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
